--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,14 +3,14 @@
   flex-direction: column;
   font-size: calc(18px + 2vmin);
   color: white;
- -webkit-box-shadow: -2px -2px 50px 3px rgba(51,51,51,1);
+  /*-webkit-box-shadow: -2px -2px 50px 3px rgba(51,51,51,1);
 -moz-box-shadow: -2px -2px 50px 3px rgba(51,51,51,1);
-box-shadow: -2px -2px 50px 3px rgba(51,51,51,1);
-background: #b93c3c;
-padding: 20px;
+box-shadow: -2px -2px 50px 3px rgba(51,51,51,1);*/
+  background: #b93c3c;
+  padding: 20px;
 }
 
 header h1 {
-  font-weight:100;
+  font-weight: 100;
   margin: 10px 0;
 }
