--- a/src/components/Pages/Trending.css
+++ b/src/components/Pages/Trending.css
@@ -1,5 +1,6 @@
 .trends {
-    display:flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  overflow-x: auto;
+  overflow-wrap: break-word;
 }
